# secbot

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  supervisord.conf
.github/workflows/: ci.yml  python-package.yml
experiments/: README  edgar_playground.py
experiments/langchain/: async_streaming.py  async_streaming_with_function_calling.py  async_streaming_with_function_calling_chainlit.py  basic_chat_functionality.py  basic_chat_functionality_with_function_calling.py
hacks/: README.md  patch_socket.py  socket.py
src/: app.py
src/utils/: custom_data_layer.py  dcm.py  earnings_call_transcripts.py  edgar_reports.py  openai.py  sqlite_data_layer.py
tests/src/: test_app.py  test_edgar_app.py
tests/utils/: test_edgar_reports.py  test_openai.py
