[project]
name = "secbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chainlit>=1.1.404",
    "edgartools>=2.29.1",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain>=0.3.0",
    "openai>=1.45.0",
    "pre-commit>=3.8.0",
    "pydantic>=2.9.1",
    "pyproject-toml>=0.0.10",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "ruff>=0.6.5",
]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
pythonpath = ["src"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
